--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -194,6 +194,8 @@
     &.site-logo {
       margin-left: 0;
       margin-right: 0.5rem;
+      border-radius: 5px;
+      overflow: hidden;
     }
 
     &.site-title {
