--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -3,9 +3,9 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #252a34 !default;
+$background-color: #121212 !default;
 $text-color: #eaeaea !default;
-$primary-color: #e7b0a2 !default;
+$primary-color: #efaa98 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
